plugins {
    id 'java'
    id 'io.spring.dependency-management'        version libs.versions.springDependencyManagement
    id 'org.springframework.boot'               version libs.versions.springBoot
    id 'org.flywaydb.flyway'                    version libs.versions.flyway
}

group = 'chien.demo'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    implementation {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation                  libs.springBootStarterDataJpa
    implementation                  libs.springBootStarterWeb
    implementation                  libs.springBootStarterSecurity
    implementation                  libs.jjwt
    implementation                  libs.springBootStarterValidation
    implementation                  libs.mysqlConnector
    implementation                  libs.flyway
    implementation                  libs.flywayMysql
    implementation                  libs.mapstruct
    implementation                  libs.log4j2
    implementation                  libs.swagger
    //implementation                  libs.tomcatJdbc
    //implementation                  libs.ojdbc8

    compileOnly                     libs.lombok
    runtimeOnly                     libs.h2
    annotationProcessor             libs.lombok
    annotationProcessor             libs.mapstructProcessor
    testImplementation              libs.springBootStarterTest
    developmentOnly                 libs.devtools
}

flyway {
    url = 'jdbc:mysql://127.0.0.1:3306/shopdemodb'
    user = 'root'
    password = '12345'
    locations = ["filesystem:src/main/resources/db/migration/"]
//    schemas = ['spring_demo']
    connectRetries = 10
    baselineVersion = 0
    baselineDescription = "Base Line"
}

tasks.named('test') {
    useJUnitPlatform()
}
